70133 fix image loader z-index for badges

--- a/Snowdog_Components/components/Organisms/gallery/_gallery.scss
+++ b/Snowdog_Components/components/Organisms/gallery/_gallery.scss
@@ -103,6 +103,10 @@
 
     &-placeholder {
         position: relative;
+
+        .loader {
+            z-index: 0;
+        }
     }
 
     &__placeholder-image {
